core/src/main/web/outputdisplay/bko-plot/bko-plot.css
/*
 *  Copyright 2014 TWO SIGMA OPEN SOURCE, LLC
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

.plot-renderdiv {
  background-color: #FEFEFE;
  border: 1px solid #BBBBBB;
}

.plot-label,
.plot-test,
.plot-xylabel,
.plot-cursorlabel,
.plot-constlabel,
.plot-tooltip {
  font-family: verdana, helvetica, arial, sans-serif;
}

.plot-resp {
  pointer-events: auto;
}

.plot-constline,
.plot-line {
  fill: none;
}

.plot-label {
  font-size: 0.75em;
}
.plot-text {
  font-size: 1.0em;
}
.plot-xylabel {
  font-size: 0.9em;
  text-anchor: middle;
}

.plot-cursorlabel,
.plot-constlabel {
  font-size: 0.75em;
  color: white;
  padding: 1px 5px;
  pointer-events: none;
  position: absolute;
  width: auto;
  height: auto;
  border-radius: 2px;
}

.plot-coord,
.plot-coord-base {
  stroke-width: 1;
  pointer-events: none;
}

.plot-constline,
.plot-constband,
.plot-line,
.plot-area,
.plot-cursor {
  pointer-events: none;
}

.plot-bar,
.plot-stem {
  pointer-events: auto;
}

.plot-coord {
  stroke: #111111;
  stroke-dasharray: 1, 1;
  stroke-width: 1;
  opacity: .5;
}

.plot-coord-base {
  stroke: #333333;
  stroke-width: 3;
  opacity: .75;
}

.plot-pointrect,
.plot-pointcircle,
.plot-pointdiamond {
  /* to be added if needed */
}

.plot-locatebox {
  fill: #003366;
  opacity: 0.2;
}

.plot-truncatebox {
  fill: #FEFEFE;
}

.plot-title {
  text-align: center;
  font-weight: bold;
  font-size: 1.2em;
  margin: 5px;
}

.plot-legendbox {
  width: 10px;
  height: 10px;
  margin: 0px 5px;
  vertical-align: middle;
  display: inline-block;
  bottom: 0px;
}

.plot-legendcheckbox {
  margin: 0px !important;
  margin-right: 5px;
}

.plot-legendcontainer {
  stroke: gray;
  fill: #FEFEFE;
  position: absolute;
  padding-left: 10px;
  width: 150px;
  height: auto;
  border: 1px solid #BBBBBB;
  background-color: white;
  list-style: none;
}

.plot-coverbox {
  fill: #FEFEFE;
}

.plot-respdot,
.plot-respstem {
  fill: white;
  stroke-width: 1;
}

.plot-tooltip {
  font-size: 0.8em;
  position: absolute;
  display: inline-table;
  border: 1px solid;
  background-color: white;
  padding: 0.8em;
}

